Correções import e testes unitarios.