@@ -1,17 +1,11 @@
 package br.com.fiap.postech.soat16.fase1.service;
 
-import br.com.fiap.postech.soat16.fase1.dto.pagination.PageableRequestDto;
-import br.com.fiap.postech.soat16.fase1.dto.pagination.PageableResponseDto;
-import br.com.fiap.postech.soat16.fase1.dto.request.VehicleFilterDto;
-import br.com.fiap.postech.soat16.fase1.dto.request.VehicleDto;
-import br.com.fiap.postech.soat16.fase1.dto.response.VehicleResponseDto;
-import br.com.fiap.postech.soat16.fase1.exception.DuplicateLicensePlateException;
-import br.com.fiap.postech.soat16.fase1.exception.ResourceNotFoundException;
-import br.com.fiap.postech.soat16.fase1.mapper.VehicleMapper;
-import br.com.fiap.postech.soat16.fase1.model.Vehicle;
-import br.com.fiap.postech.soat16.fase1.model.VehicleType;
-import br.com.fiap.postech.soat16.fase1.repository.VehicleRepository;
-import io.smallrye.mutiny.Uni;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.*;
+
+import java.util.List;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -20,11 +14,19 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
+import br.com.fiap.postech.soat16.fase1.dto.pagination.PageableRequestDto;
+import br.com.fiap.postech.soat16.fase1.dto.pagination.PageableResponseDto;
+import br.com.fiap.postech.soat16.fase1.dto.request.VehicleDto;
+import br.com.fiap.postech.soat16.fase1.dto.request.VehicleFilterDto;
+import br.com.fiap.postech.soat16.fase1.dto.response.VehicleResponseDto;
+import br.com.fiap.postech.soat16.fase1.exception.DuplicateLicensePlateException;
+import br.com.fiap.postech.soat16.fase1.exception.ResourceNotFoundException;
+import br.com.fiap.postech.soat16.fase1.mapper.VehicleMapper;
+import br.com.fiap.postech.soat16.fase1.model.Vehicle;
+import br.com.fiap.postech.soat16.fase1.model.VehicleType;
+import br.com.fiap.postech.soat16.fase1.repository.VehicleRepository;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import io.smallrye.mutiny.Uni;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("VehicleService — Unit Tests")
@@ -69,8 +71,8 @@ class VehicleServiceTest {
 
             assertNotNull(result);
             assertEquals(1, result.content().size());
-            assertEquals("ABC1234", result.content().get(0).licensePlate());
-            assertEquals("Toyota", result.content().get(0).manufacturer());
+            assertEquals("ABC1234", result.content().getFirst().licensePlate());
+            assertEquals("Toyota", result.content().getFirst().manufacturer());
         }
 
         @Test
